# bot-organizer-ai-

./: .gitignore  organizer.py
bot_organizer v2/: .gitignore  README.md  __init__.py  pyproject.toml  rules.yaml
bot_organizer v2/bot_organizer/: actions.py  cli.py  config.py  organizer.py  rules.py  undo.py
